Create special objects for scripts instead of functions
JerryScript-DCO-1.0-Signed-off-by: Zoltan Herczeg zherczeg.u-szeged@partner.samsung.com

--- a/docs/02.API-REFERENCE.md
+++ b/docs/02.API-REFERENCE.md
@@ -41,6 +41,8 @@ Enum that contains JerryScript **object** value types:
  - JERRY_OBJECT_TYPE_GENERIC - Generic JavaScript object without any internal property
  - JERRY_OBJECT_TYPE_ARRAY - Array object
  - JERRY_OBJECT_TYPE_PROXY - Proxy object
+ - JERRY_OBJECT_TYPE_SCRIPT - Script object (see [jerry_parse](#jerry_parse))
+ - JERRY_OBJECT_TYPE_MODULE - Module object (see [jerry_parse](#jerry_parse))
  - JERRY_OBJECT_TYPE_FUNCTION - Function object (see [jerry_function_get_type](#jerry_function_get_type))
  - JERRY_OBJECT_TYPE_TYPEDARRAY - %TypedArray% object (see [jerry_get_typedarray_type](#jerry_get_typedarray_type))
  - JERRY_OBJECT_TYPE_ITERATOR - Iterator object (see [jerry_iterator_get_type](#jerry_get_typedarray_type))
@@ -57,6 +59,8 @@ Enum that contains JerryScript **object** value types:
  - JERRY_OBJECT_TYPE_BIGINT - BigInt object
 
 *New in version 2.4*.
+
+*Changed in version [[NEXT_RELEASE]]*: Added `JERRY_OBJECT_TYPE_SCRIPT`, `JERRY_OBJECT_TYPE_MODULE` values.
 
 ## jerry_function_type_t
 
@@ -159,6 +163,7 @@ Possible compile time enabled feature types:
  - JERRY_FEATURE_REALM - realm support
  - JERRY_FEATURE_GLOBAL_THIS - GlobalThisValue support
  - JERRY_FEATURE_PROMISE_CALLBACK - Promise callback support
+ - JERRY_FEATURE_MODULE - Module support
 
 *New in version 2.0*.
 
@@ -166,7 +171,7 @@ Possible compile time enabled feature types:
 
 *Changed in version 2.4*: Added `JERRY_FEATURE_BIGINT`, `JERRY_FEATURE_REALM` values.
 
-*Changed in version [[NEXT_RELEASE]]*: Added `JERRY_FEATURE_GLOBAL_THIS`, `JERRY_FEATURE_PROMISE_CALLBACK` values.
+*Changed in version [[NEXT_RELEASE]]*: Added `JERRY_FEATURE_GLOBAL_THIS`, `JERRY_FEATURE_PROMISE_CALLBACK`, `JERRY_FEATURE_MODULE` values.
 
 ## jerry_container_type_t
 
@@ -1515,7 +1520,7 @@ main (void)
 
 **Summary**
 
-Run an EcmaScript function created by `jerry_parse`.
+Run a Script or Module created by [jerry_parse](#jerry_parse).
 
 *Notes*:
   - The code should be previously parsed with `jerry_parse`.
