--- a/docs/03.API-EXAMPLE.md
+++ b/docs/03.API-EXAMPLE.md
@@ -153,7 +153,7 @@ main (void)
   jerry_init (JERRY_INIT_EMPTY);
 
   /* Setup Global scope code */
-  jerry_value_t parsed_code = jerry_parse (NULL, 0, script, sizeof (script) - 1, JERRY_PARSE_NO_OPTS);
+  jerry_value_t parsed_code = jerry_parse (script, sizeof (script) - 1, NULL);
 
   /* Check if there is any JS code parse error */
   if (!jerry_value_is_error (parsed_code))
@@ -259,7 +259,7 @@ main (void)
   }
 
   /* Setup Global scope code */
-  jerry_value_t parsed_code = jerry_parse (NULL, 0, script, script_size, JERRY_PARSE_NO_OPTS);
+  jerry_value_t parsed_code = jerry_parse (script, script_size, NULL);
 
   if (!jerry_value_is_error (parsed_code))
   {
@@ -378,7 +378,7 @@ main (void)
   }
 
   /* Setup Global scope code */
-  jerry_value_t parsed_code = jerry_parse (NULL, 0, script, script_size, JERRY_PARSE_NO_OPTS);
+  jerry_value_t parsed_code = jerry_parse (script, script_size, NULL);
 
   if (!jerry_value_is_error (parsed_code))
   {
@@ -444,7 +444,7 @@ main (void)
                                   jerryx_handler_print);
 
   /* Setup Global scope code */
-  jerry_value_t parsed_code = jerry_parse (NULL, 0, script, script_size, JERRY_PARSE_NO_OPTS);
+  jerry_value_t parsed_code = jerry_parse (script, script_size, NULL);
 
   if (!jerry_value_is_error (parsed_code))
   {
