Reorganize property descriptor flags
Furthermore rename JERRY_PROP_IS_THROW to JERRY_PROP_SHOULD_THROW
and add more invalid descriptor checks.

JerryScript-DCO-1.0-Signed-off-by: Zoltan Herczeg zherczeg.u-szeged@partner.samsung.com

--- a/docs/02.API-REFERENCE.md
+++ b/docs/02.API-REFERENCE.md
@@ -489,16 +489,16 @@ Enum that contains the supported binary operation types
 Enum that contains the flags of property descriptors.
 
  - JERRY_PROP_NO_OPTS - empty property descriptor
- - JERRY_PROP_IS_GET_DEFINED - Is [[Get]] defined?
- - JERRY_PROP_IS_SET_DEFINED - Is [[Set]] defined?
  - JERRY_PROP_IS_CONFIGURABLE - [[Configurable]]
  - JERRY_PROP_IS_ENUMERABLE - [[Enumerable]]
  - JERRY_PROP_IS_WRITABLE - [[Writable]]
- - JERRY_PROP_IS_THROW - Flag that controls failure handling
- - JERRY_PROP_IS_VALUE_DEFINED - Is [[Value]] defined?
  - JERRY_PROP_IS_CONFIGURABLE_DEFINED - Is [[Configurable]] defined?
  - JERRY_PROP_IS_ENUMERABLE_DEFINED - Is [[Enumerable]] defined?
  - JERRY_PROP_IS_WRITABLE_DEFINED - Is [[Writable]] defined?
+ - JERRY_PROP_IS_VALUE_DEFINED - Is [[Value]] defined?
+ - JERRY_PROP_IS_GET_DEFINED - Is [[Get]] defined?
+ - JERRY_PROP_IS_SET_DEFINED - Is [[Set]] defined?
+ - JERRY_PROP_SHOULD_THROW - Should throw on error, instead of returning with false
 
 *New in version [[NEXT_RELEASE]]*.
 
